<resources>
    <!-- Tela Principal Valores String-->
    <string name="app_name">Token Filmes</string>
    <string name="poster_description">Poster do Filme</string>
    <string name="titulo_description">Titulo do Filme</string>
    <string name="info_description">Ano e avaliação</string>
    <string name="poster_detail">Poster Detalhado</string>
    <string name="rate_detail">Avaliação do Filme</string>
    <string name="pop_detail">Popularidade do Filme</string>
    <string name="sinopse_detail">Sinopse do Filme</string>
    <string name="genre_detail">Gêneros do Filme</string>
    <string name="info_detail">Ano e Duração do Filme</string>
    <string name="btn_atualizar">Atualizar</string>
    <string name="error_description">Não Foi possível carregar as informações. Verifique sua conexão e tente novamente</string>
    <string name="error_title">Ocorreu um erro</string>
    <string name="content_error_description">Mensagem de erro</string>
    <string name="content_btn_atualizar">Botão atualizar tela</string>
    <string name="image_status">Status da conexão do app</string>
</resources>