<?xml version="1.0" encoding="utf-8"?>
<!--A tag Layout é adicionada para poder adicionar a tag data e uma variável
    o uso dessa variável diretamente no layout faz parte do modo de
    adicionar dados ao layout por Data binding, dessa forma como
    esse dado é LiveData ele será sempre atualizado automaticamente
   -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="filme"
            type="com.jdavifranco.desafio.tokenfilmes.database.Filme" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detalhes.DetalhesFragment">


        <ImageView
            android:id="@+id/imgDetailPoster"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:contentDescription="@string/poster_detail"
            imageUrl="@{filme.postUrl}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/txtDetailTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/titulo_description"
            android:text="@{filme.title}"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgDetailPoster"
            tools:text="The Dark Knight" />

        <TextView
            android:id="@+id/txtDetailInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/info_detail"
            android:text="@{filme.year}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtDetailTitulo"
            tools:text="2001 - 120min" />

        <TextView
            android:id="@+id/txtVote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/rate_detail"
            app:drawableRightCompat="@drawable/ic_star_rate_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgDetailPoster"
            tools:text="9.8" />

        <TextView
            android:id="@+id/txtPopularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/pop_detail"
            app:drawableRightCompat="@drawable/ic_baseline_trending_up_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtVote"
            tools:text="122" />

        <TextView
            android:id="@+id/txtSinopse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/sinopse_detail"
            android:text="@{filme.detalhes.overview}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            tools:text="Two imprisoned men bond over a number of years, finding solace and eventual redemption through acts of common decency." />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtGenres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/genre_detail"
            android:text="@{filme.detalhes.genres}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSinopse"
            tools:text="Gêneros: Comédia, Romance, Ação" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>